--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Year's Countdown</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Countdown to New Year</h1>
-  <div id="countdown"></div>
+  <div class="countdown" id="countdown">
+    <div id="days"></div>
+    <div id="hours"></div>
+    <div id="minutes"></div>
+    <div id="seconds"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
