--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <span id="year"></span>
   <div class="countdown" id="countdown">
     <div id="days"></div>
     <div id="hours"></div>
