--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <span id="year"></span>
+  <span id="overlayText"></span>
   <div class="countdown" id="countdown">
     <div id="days"></div>
     <div id="hours"></div>
