--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <span id="year"></span>
       <span id="overlayText"></span>
       <div class="countdown" id="countdown">
-         <div id="days" class="timer"></div>
-         <div id="hours" class="timer"></div>
-         <div id="minutes" class="timer"></div>
-         <div id="seconds" class="timer"></div>
+         <div id="days">DAYS</div>
+         <div id="hours">HOURS</div>
+         <div id="minutes">MINUTES</div>
+         <div id="seconds">SECONDS</div>
       </div>
       <script src="script.js"></script>
    </body>
