--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       <span id="year"></span>
       <span id="overlayText"></span>
       <div class="countdown" id="countdown">
-         <div id="days">DAYS</div>
-         <div id="hours">HOURS</div>
-         <div id="minutes">MINUTES</div>
-         <div id="seconds">SECONDS</div>
+         <div class="countdown-labels">
+            <div id="days">DAYS</div>
+            <div id="hours">HOURS</div>
+            <div id="minutes">MINUTES</div>
+            <div id="seconds">SECONDS</div>
+         </div>
       </div>
       <script src="script.js"></script>
    </body>
