--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
       <span id="year"></span>
       <span id="overlayText"></span>
       <div class="countdown" id="countdown">
-            <div id="days"></div>
+      <div class="time">
+         <div id="days"></div
+            <small>DAYS</small>
+         </div>
+         <div class="time">
             <div id="hours"></div>
+            <small>DAYS</small>
+         </div>
+         <div class="time">
             <div id="minutes"></div>
+            <small>DAYS</small>
+         </div>
+         <div class="time">
             <div id="seconds"></div>
+            <small>DAYS</small>
+         </div>
       </div>
       <script src="script.js"></script>
    </body>
