--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
          </div>
          <div class="time">
             <div id="hours"></div>
-            <small>DAYS</small>
+            <small>HOURS</small>
          </div>
          <div class="time">
             <div id="minutes"></div>
-            <small>DAYS</small>
+            <small>MINUTES</small>
          </div>
          <div class="time">
             <div id="seconds"></div>
-            <small>DAYS</small>
+            <small>SECONDS</small>
          </div>
       </div>
       <script src="script.js"></script>
