--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
       <span id="year"></span>
       <span id="overlayText"></span>
       <div class="countdown" id="countdown">
-      <div class="time">
-         <div id="days"></div
+         <div class="time">
+            <h2 id="days"></h2>
             <small>DAYS</small>
          </div>
          <div class="time">
-            <div id="hours"></div>
+            <h2 id="hours"></h2>
             <small>HOURS</small>
          </div>
          <div class="time">
-            <div id="minutes"></div>
+            <h2 id="minutes"></h2>
             <small>MINUTES</small>
          </div>
          <div class="time">
-            <div id="seconds"></div>
+            <h2 id="seconds"></h2>
             <small>SECONDS</small>
          </div>
       </div>
