--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <span id="overlayText"></span>
       <div class="countdown" id="countdown">
          <div class="time">
-            <h2 id="days"></h2>
+            <div id="days"></div>
             <small>DAYS</small>
          </div>
          <div class="time">
-            <h2 id="hours"></h2>
+            <div id="hours"></div>
             <small>HOURS</small>
          </div>
          <div class="time">
-            <h2 id="minutes"></h2>
+            <div id="minutes"></div>
             <small>MINUTES</small>
          </div>
          <div class="time">
-            <h2 id="seconds"></h2>
+            <div id="seconds"></div>
             <small>SECONDS</small>
          </div>
       </div>
