--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <span id="overlayText"></span>
       <div class="countdown" id="countdown">
          <div class="time">
-            <h3 id="days"></h3>
+            <span id="days"></span>
             <small>DAYS</small>
          </div>
          <div class="time">
-            <h3 id="hours"></h3>
+            <span id="hours"></span>
             <small>HOURS</small>
          </div>
          <div class="time">
-            <h3 id="minutes"></h3>
+            <span id="minutes"></span>
             <small>MINUTES</small>
          </div>
          <div class="time">
-            <h3 id="seconds"></h3>
+            <span id="seconds"></span>
             <small>SECONDS</small>
          </div>
       </div>
