--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <div class="countdown" id="countdown">
          <div class="time">
             <span id="days"></span>
-            <small>DAYS</small>
+            <center><small>DAYS</small></center>
          </div>
          <div class="time">
             <span id="hours"></span>
-            <small>HOURS</small>
+            <center><small>HOURS</small></center>
          </div>
          <div class="time">
             <span id="minutes"></span>
-            <small>MINUTES</small>
+            <center><small>MINUTES</small></center>
          </div>
          <div class="time">
             <span id="seconds"></span>
-            <small>SECONDS</small>
+            <center><small>SECONDS</small></center>
          </div>
       </div>
       <script src="script.js"></script>
