--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="countdown" id="countdown">
          <div class="time">
             <span id="days"></span>
-            <center><small>DAYS</small></center>
+            <small><center>DAYS</center></small>
          </div>
          <div class="time">
             <span id="hours"></span>
-            <center><small>HOURS</small></center>
+            <small>HOURS</small>
          </div>
          <div class="time">
             <span id="minutes"></span>
@@ -25,7 +25,7 @@
          </div>
          <div class="time">
             <span id="seconds"></span>
-            <center><small>SECONDS</small></center>
+            <small>SECONDS</small>
          </div>
       </div>
       <script src="script.js"></script>
