--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="countdown" id="countdown">
          <div class="time">
             <span id="days"></span>
-            <small><center>DAYS</center></small>
+            <small>DAYS</small>
          </div>
          <div class="time">
             <span id="hours"></span>
