--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          </div>
          <div class="time">
             <span id="minutes"></span>
-            <center><small>MINUTES</small></center>
+            <small>MINUTES</small>
          </div>
          <div class="time">
             <span id="seconds"></span>
